--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="container-fluid">
       <div id="buttonDiv" class="row"></div>
       <div class="row">
-        <div class="col-8"></div>
+        <div id="gifDiv" class="col-8"></div>
         <div class="col-4"></div>
       </div>
     </div>
