cleaned up some code, made animation better after referring to class resources i missed, pausing/playing gifs now much smoother

--- a/index.html
+++ b/index.html
@@ -27,6 +27,10 @@
             /><br />
             <input id="findGif" type="button" value="Create Button" />
           </form>
+
+          <div id="favorites" class="row mt-3 border border-secondary">
+            <h1>Favorites:</h1>
+          </div>
         </div>
       </div>
     </div>
