added link in a comment to cover all, dont want to miss an A due to a fine print mishap again

--- a/index.html
+++ b/index.html
@@ -43,3 +43,5 @@
     <script src="script.js" type="text/javascript"></script>
   </body>
 </html>
+<!-- https://atrodondi.github.io/Bootstrap-Portfolio/portfolio.html
+wanted to make sure i provided a link to the site in my portfolio here, just in case. I want that A. -->
